[WGSL] textureBarrier is not implemented https://bugs.webkit.org/show_bug.cgi?id=269412 <radar://122977866>

Reviewed by Tadeu Zagallo.

textureBarrier(), textureLoad(), and textureStore() were recently
updated to support read and read_write storage textures.

Add this to the WGSL compiler.

This allows the newly added storage_texture/read_write.html to pass, so add
passing expectations for this test as well.

* LayoutTests/http/tests/webgpu/webgpu/api/operation/storage_texture/read_write-expected.txt:
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::emitTextureBarrier):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/TypeDeclarations.rb:

Canonical link: https://commits.webkit.org/274851@main